// Auction System Database Schema

Table categories {
  categoryId int [pk, increment]
  categoryName varchar(100) [unique]
  categoryImg varchar(300)
  categoryStatus enum('activate', 'deactivate', 'suspend') [default: 'activate']
  createdAt timestamp [default: `current_timestamp()`]
}

Table users {
  userId int [pk, increment]
  userName varchar(100)
  userFirstName varchar(100)
  userLastName varchar(100)
  userEmail varchar(100) [unique]
  userPassword varchar(255)
  userOldPassword varchar(255)
  userProfileImg varchar(300)
  userUpiId varchar(500) [null]
  userRole enum('user', 'admin') [default: 'user']
  userStatus enum('activate', 'deactivate', 'suspend') [default: 'activate']
  createdAt timestamp [default: `current_timestamp()`]
}

Table auctions {
  auctionId int [pk, increment]
  auctionTitle varchar(255)
  auctionStartPrice decimal(10, 2)
  auctionStartDate datetime
  auctionEndDate datetime
  auctionProductImg varchar(300)
  auctionAddress varchar(300)
  auctionDescription longtext
  auctionCategoryId int
  auctionCreatedBy int
  auctionStatus enum('activate', 'deactivate', 'suspend') [default: 'activate']
  createdAt timestamp [default: `current_timestamp()`]

  Indexes {
    (auctionCreatedBy)
    (auctionCategoryId)
  }
}

Table bids {
  bidId int [pk, increment]
  bidAuctionId int
  bidUserId int
  bidAmount decimal(10, 2)
  createdAt timestamp [default: `current_timestamp()`]

  Indexes {
    (bidUserId)
    (bidAuctionId)
  }
}

// Relationships

Ref: auctions.auctionCategoryId > categories.categoryId
Ref: auctions.auctionCreatedBy > users.userId
Ref: bids.bidAuctionId > auctions.auctionId
Ref: bids.bidUserId > users.userId
